RESOLVED FIXED71965
SocketStreamHandleCFNet doesn't check for proxy errors
https://bugs.webkit.org/show_bug.cgi?id=71965
Summary SocketStreamHandleCFNet doesn't check for proxy errors
Alexey Proskuryakov
Reported 2011-11-09 16:21:21 PST
We only check for 407 authentication, but the proxy may outright reject the connection.
Attachments
proposed patch (4.61 KB, patch)
2011-11-09 16:35 PST, Alexey Proskuryakov
darin: review+
patch for landing (4.57 KB, patch)
2011-11-30 12:47 PST, Alexey Proskuryakov
webkit.review.bot: commit-queue-
patch for landing (4.56 KB, patch)
2011-11-30 21:30 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-11-09 16:35:08 PST
Created attachment 114393 [details] proposed patch
WebKit Review Bot
Comment 2 2011-11-09 16:37:11 PST
Attachment 114393 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/network/cf/SocketStreamHandleCFNet.cpp:455: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3 2011-11-30 12:27:40 PST
Comment on attachment 114393 [details] proposed patch How did you test?
Alexey Proskuryakov
Comment 4 2011-11-30 12:45:24 PST
Comment on attachment 114393 [details] proposed patch I did a fair amount of manual testing with our internal proxies, trying to execute all changed code paths. And I noticed this problem while testing my fix for bug 71964. Perhaps one day we'll find a way to make automated tests for such changes.
Alexey Proskuryakov
Comment 5 2011-11-30 12:47:21 PST
Created attachment 117252 [details] patch for landing To clarify, I was just looking at tcpdump output at first, and then as Web Inspector error messages. Patch for landing with style fixed.
WebKit Review Bot
Comment 6 2011-11-30 21:18:59 PST
Comment on attachment 117252 [details] patch for landing Rejecting attachment 117252 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/10693454
Alexey Proskuryakov
Comment 7 2011-11-30 21:30:33 PST
Created attachment 117328 [details] patch for landing Indeed.
WebKit Review Bot
Comment 8 2011-11-30 23:28:13 PST
Comment on attachment 117328 [details] patch for landing Clearing flags on attachment: 117328 Committed r101621: <http://trac.webkit.org/changeset/101621>
WebKit Review Bot
Comment 9 2011-11-30 23:28:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.