SocketStreamHandleCFNet doesn't check for proxy errors https://bugs.webkit.org/show_bug.cgi?id=71965

Reviewed by Darin Adler.

* platform/network/cf/SocketStreamHandleCFNet.cpp:
(WebCore::getStoredCONNECTProxyCredentials): Added a FIXME about retrieving proxy credentials.
(WebCore::SocketStreamHandle::addCONNECTCredentials): Added human readable messages to errors,
they go to Web Inspector console.
(WebCore::SocketStreamHandle::readStreamCallback): Handle proxy response codes other than 200
and 407 by failing cleanly.


Canonical link: https://commits.webkit.org/90093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101621 268f45cc-cd09-0410-ab3c-d52691b4dbfc